Thu Jun 20 15:20:25 CEST 2013
ffmpeg-0.11.1-i486-2_microlinux.txz: Rebuilt. 
  Fixed inconsistent $ARCH field in the package name, which made the package
	fly under slackpkg's radar ;o)
+---------------------------+
Tue Jun 18 08:20:48 CEST 2013
hplip-3.12.11-i486-1_microlinux.txz: Upgraded.
  Fix for broken 'hp-toolbox' utility.
+---------------------------+
Sun Jun 16 13:22:19 CEST 2013
Work in progress.

user-settings-console-1.0-noarch-2_microlinux.txz: Added.
sbopkg-0.36.0-noarch-1_microlinux.txz: Added.
recode-3.6-i486-2_microlinux.txz: Added.
unrar-4.0.7-i486-1_microlinux.txz: Added.
p7zip-9.20.1-i486-1_microlinux.txz: Added.
faad2-2.7-i486-1_microlinux.txz: Added.
lame-3.99.5-i486-1_microlinux.txz: Added.
libcuefile-r453-i486-1_microlinux.txz: Added.
libmms-0.6.2-i486-1_microlinux.txz: Added.
libmp4v2-2.0.0-i486-1_microlinux.txz: Added.
libreplaygain-r453-i486-1_microlinux.txz: Added.
speex-1.2rc1-i486-1_microlinux.txz: Added.
twolame-0.3.13-i486-1_microlinux.txz: Added.
faac-1.28-i486-2_microlinux.txz: Added.
ffmpeg-0.11.1-i686_custom-1_microlinux.txz: Added.
musepack-tools-r435-i486-1_microlinux.txz: Added.
libshout-2.2.2-i486-1_microlinux.txz: Added.
mpd-0.17.1-i486-1_microlinux.txz: Added.
+---------------------------+