@@ -17,4 +17,5 @@ ffmpeg
 musepack-tools
 libshout
 mpd
+icecast
 
