@@ -1,0 +1,49 @@
+#!/bin/sh
+# /etc/rc.d/rc.icecast
+
+[ -x /usr/bin/icecast ] || exit 0
+
+start() {
+      # Start daemons.
+      echo -n "Starting Icecast server ... "
+      /usr/bin/icecast -b -c /etc/icecast/icecast.xml
+      echo
+}
+stop() {
+      # Stop daemons.
+      echo -n "Shutting down Icecast ... "
+      # Rude: killall -TERM
+      killall -TERM icecast
+      echo
+}
+status() {
+  PIDS1=$(pidof icecast)
+  if [ "x$PIDS1" = "x" ]; then
+    echo "Icecast is not running ..."
+  else
+    echo "Icecast is running at PID(s) ${PIDS1}..."
+  fi
+}
+
+# See how we were called.
+case "$1" in
+  start)
+        start
+        ;;
+  stop)
+        stop
+        ;;
+  restart)
+        stop
+        sleep 2
+        start
+        ;;
+  status)
+        status
+        ;;
+  *)
+        echo $"Usage: $0 {start|stop|restart|status}"
+        ;;
+esac
+
+exit 0
